// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 1
        </p>
        <p
          aria-hidden="true"
        >
          1
        </p>
      </div>
      <h2
        class="euiTitle euiTitle--small euiStep__title"
      >
        first title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 2
        </p>
        <p
          aria-hidden="true"
        >
          2
        </p>
      </div>
      <h2
        class="euiTitle euiTitle--small euiStep__title"
      >
        second title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      />
      <h2
        class="euiTitle euiTitle--small euiStep__title"
      >
        third title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 1
        </p>
        <p
          aria-hidden="true"
        >
          1
        </p>
      </div>
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 2
        </p>
        <p
          aria-hidden="true"
        >
          2
        </p>
      </div>
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      />
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 10
        </p>
        <p
          aria-hidden="true"
        >
          10
        </p>
      </div>
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 11
        </p>
        <p
          aria-hidden="true"
        >
          11
        </p>
      </div>
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
      />
      <p
        class="euiTitle euiTitle--small euiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with titleSize 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle euiStepNumber--small"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 1
        </p>
        <p
          aria-hidden="true"
        >
          1
        </p>
      </div>
      <p
        class="euiTitle euiTitle--xsmall euiStep__title"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStep__circle euiStepNumber--small"
      >
        <p
          class="euiScreenReaderOnly"
        >
          Step 2
        </p>
        <p
          aria-hidden="true"
        >
          2
        </p>
      </div>
      <p
        class="euiTitle euiTitle--xsmall euiStep__title"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep euiStep--small"
  >
    <div
      class="euiStep__titleWrapper"
    >
      <div
        class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle euiStepNumber--small"
      />
      <p
        class="euiTitle euiTitle--xsmall euiStep__title"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
